--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "axios": "^1.3.4",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "jotai": "^2.0.3",
     "react": "18.2.0",
     "react-native": "0.71.3"
   },
