--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,13 +13,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~48.0.6",
+    "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "jotai": "^2.0.3",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-navigation": "^4.4.4"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
