--- a/PronoFuture/appsettings.json
+++ b/PronoFuture/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PronoFuture.Data": "Server=(LocalDb)\\MSSQLLocalDB;Database=PronoFutureDb;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=DESKTOP-26MRVED;Initial Catalog=Prono;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JWTSettings": {
 
