--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@react-native-picker/picker": "^2.4.9",
-    "expo-linear-gradient": "^12.1.2"
+    "expo-linear-gradient": "^12.1.2",
+    "react-native": "0.71.4"
   }
 }
