--- a/PronoFuture/appsettings.json
+++ b/PronoFuture/appsettings.json
@@ -7,10 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-26MRVED;Initial Catalog=Prono;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  },
+    "DefaultConnection": "Server=localhost; Database=prono; userid=sa; password=Robert123; Trusted_Connection=True; MultipleActiveResultSets=true"   },
   "JWTSettings": {
 
     "TokenKey": "Cea mai secreta parola de JWT"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5002"
+      }
+    }
   }
 }
