--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "@react-native-picker/picker": "^2.4.9",
+    "@react-native-picker/picker": "2.4.8",
     "expo-linear-gradient": "^12.1.2",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-toast-message": "^2.1.6"
   }
 }
