--- a/PronoFuture/appsettings.json
+++ b/PronoFuture/appsettings.json
@@ -8,16 +8,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-26MRVED;Initial Catalog=PronoTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Server=.\\SQLExpress;Database=PronoTest;Integrated Security=True"
   },
-    "JWTSettings": {
+  "JWTSettings": {
 
-      "TokenKey": "Cea mai secreta parola de JWT"
-    },
-    "Kestrel": {
-      "Endpoints": {
-        "Http": {
-          "Url": "http://localhost:5002"
-        }
+    "TokenKey": "Cea mai secreta parola de JWT"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5002"
       }
     }
   }
+}
