--- a/PronoFuture/appsettings.json
+++ b/PronoFuture/appsettings.json
@@ -8,10 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-26MRVED;Initial Catalog=PronoTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-    //"DefaultConnection": "Server=.\\SQLExpress;Database=PronoTest;Integrated Security=True"
   },
   "JWTSettings": {
-
     "TokenKey": "Cea mai secreta parola de JWT"
   },
   "Kestrel": {
@@ -20,5 +18,11 @@
         "Url": "http://localhost:5002"
       }
     }
+  },
+  "AllowHosts": "*",
+  "AuthSettings": {
+    "Key": "this is the key used for encryption",
+    "Audience": "",
+    "Issuer": ""
   }
 }
